--- a/templates/Debian.sources.list.j2
+++ b/templates/Debian.sources.list.j2
@@ -1,8 +1,8 @@
-deb http://{{ debian_mirror }}/debian {{ ansible_distribution_release }} {{ debian_repos }}
-{% if enable_src_repos == True %}deb-src http://{{ debian_mirror }}/debian {{ ansible_distribution_release }} {{ debian_repos }}{% else %}# deb-src http://{{ debian_mirror }}/debian {{ ansible_distribution_release }} {{ debian_repos }}{% endif %}
+deb http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }} {{ DEBIAN_REPOS }}
+{% if ENABLE_SRC_REPOS == True %}deb-src http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }} {{ DEBIAN_REPOS }}{% else %}# deb-src http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }} {{ DEBIAN_REPOS }}{% endif %}
 
-deb http://{{ debian_mirror }}/debian {{ ansible_distribution_release }}-updates {{ debian_repos }}
-{% if enable_src_repos == True %}deb-src http://{{ debian_mirror }}/debian {{ ansible_distribution_release }}-updates {{ debian_repos }}{% else %}# deb-src http://{{ debian_mirror }}/debian {{ ansible_distribution_release }}-updates {{ debian_repos }}{% endif %}
+deb http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-updates {{ DEBIAN_REPOS }}
+{% if ENABLE_SRC_REPOS == True %}deb-src http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-updates {{ DEBIAN_REPOS }}{% else %}# deb-src http://{{ DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-updates {{ DEBIAN_REPOS }}{% endif %}
 
-deb http://{{ debian_security_mirror }}/ {{ ansible_distribution_release }}/updates {{ debian_repos }}
-{% if enable_src_repos == True %}deb-src http://{{ debian_security_mirror }}/ {{ ansible_distribution_release }}/updates {{ debian_repos }}{% else %}# deb-src http://{{ debian_security_mirror }}/ {{ ansible_distribution_release }}/updates {{ debian_repos }}{% endif %}
+deb http://{{ DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ DEBIAN_REPOS }}
+{% if ENABLE_SRC_REPOS == True %}deb-src http://{{ DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ DEBIAN_REPOS }}{% else %}# deb-src http://{{ DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ DEBIAN_REPOS }}{% endif %}
