--- a/templates/etc/apt/Debian.sources.list.j2
+++ b/templates/etc/apt/Debian.sources.list.j2
@@ -6,8 +6,8 @@ deb http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-upda
 
 {% if LC_ENABLE_APT_BACKPORTS == True %}
 deb http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-backports {{ LC_DEBIAN_REPOS }}
-{% if LC_ENABLE_SRC_REPOS == True %}deb-src http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-backports {{ LC_DEBIAN_REPOS }}{{ LC_DEBIAN_REPOS }}{% else %}# deb-src http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-backports {{ LC_DEBIAN_REPOS }}{% endif %}
+{% if LC_ENABLE_SRC_REPOS == True %}deb-src http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-backports {{ LC_DEBIAN_REPOS }}{% else %}# deb-src http://{{ LC_DEBIAN_MIRROR }}/debian {{ ansible_distribution_release }}-backports {{ LC_DEBIAN_REPOS }}{% endif %}
 {% endif %}
 
-deb http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ LC_DEBIAN_REPOS }}
-{% if LC_ENABLE_SRC_REPOS == True %}deb-src http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ LC_DEBIAN_REPOS }}{% else %}# deb-src http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}/updates {{ LC_DEBIAN_REPOS }}{% endif %}
+deb http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}{% if ansible_distribution_release == "bullseye" %}-security{% else %}/updates{% endif %} {{ LC_DEBIAN_REPOS }}
+{% if LC_ENABLE_SRC_REPOS == True %}deb-src http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}{% if ansible_distribution_release == "bullseye" %}-security{% else %}/updates{% endif %} {{ LC_DEBIAN_REPOS }}{% else %}# deb-src http://{{ LC_DEBIAN_SECURITY_MIRROR }}/ {{ ansible_distribution_release }}{% if ansible_distribution_release == "bullseye" %}-security{% else %}/updates{% endif %} {{ LC_DEBIAN_REPOS }}{% endif %}
